# cmake-examples

./: .gitignore  LICENSE  README.md
000-info/01-dump-variables/: CMakeLists.txt  build.sh
000-info/02-host-system-info/: CMakeLists.txt
000-info/03-host-system-name/: CMakeLists.txt
000-info/04-host-system-processor/: CMakeLists.txt
001-executable/: CMakeLists.txt  build.sh
002-static-library/: CMakeLists.txt  library.h
002-static-library/src/: library.cpp
003-shared-library/: CMakeLists.txt
004-executable-with-static-library/: CMakeLists.txt  library.cpp
004-executable-with-static-library/src/: main.cpp
005-executable-with-shared-library/: CMakeLists.txt
005-executable-with-shared-library/include/: library.h
006-build-type/: CMakeLists.txt  build.sh
007-cpp-standard/01-cmake-cxx-standard/: CMakeLists.txt
007-cpp-standard/02-check-cxx-compiler-flag/: CMakeLists.txt  build.sh
007-cpp-standard/02-check-cxx-compiler-flag/src/: main.cpp
007-cpp-standard/03-target-compile-features/: CMakeLists.txt  build.sh
008-compile-flags/01-project/: CMakeLists.txt  build.sh
008-compile-flags/02-target/: CMakeLists.txt
008-compile-flags/03-target/: CMakeLists.txt
008-compile-flags/03-target/src/: main.cpp
008-compile-flags/04-add-definitions/: CMakeLists.txt
008-compile-flags/05-target-properties/: CMakeLists.txt
009-clang/: CMakeLists.txt  build.sh
010-ninja/: CMakeLists.txt  build.sh
011-find-package/: build.sh
011-find-package/01-boost/: CMakeLists.txt
011-find-package/02-openmp/: CMakeLists.txt
011-find-package/02-openmp/src/: main.c
011-find-package/03-mpi/: CMakeLists.txt  test.sh
011-find-package/03-mpi/src/: main.c
011-find-package/src/: main.cpp
012-library-alias/: CMakeLists.txt
012-library-alias/src/: main.cpp
013-header-only-library/: CMakeLists.txt
013-header-only-library/include/: library.h
014-subdirectory/: CMakeLists.txt
014-subdirectory/executable/: CMakeLists.txt
014-subdirectory/executable/src/: main.cpp
014-subdirectory/library1/: CMakeLists.txt
014-subdirectory/library1/include/: library1.h
014-subdirectory/library1/src/: library1.cpp
014-subdirectory/library2/: CMakeLists.txt
014-subdirectory/library2/include/: library2.h
015-configure-file/01-executable/: CMakeLists.txt
015-configure-file/01-executable/include/: version.h.in
015-configure-file/02-library/: CMakeLists.txt
015-configure-file/02-library/include/: library.h  version.h.in
015-configure-file/02-library/src/: library.cpp  main.cpp
015-configure-file/03-only/: CMakeLists.txt
015-configure-file/03-only/include/: version.h.in
015-configure-file/03-only/src/: main.cpp
016-execute-process/: CMakeLists.txt
016-execute-process/01-output-file/: build.sh
016-execute-process/02-output-variable/: CMakeLists.txt
016-execute-process/02-output-variable/src/: main.cpp
016-execute-process/src/: main.cpp
017-add-custom-command/01-simple/: CMakeLists.txt
017-add-custom-command/02-protobuf/: CMakeLists.txt
017-add-custom-command/03-protobuf-multi/: CMakeLists.txt
017-add-custom-command/03-protobuf-multi/src/: task.proto  user.proto
018-protobuf/: CMakeLists.txt  main.cpp
019-qt5/01-auto/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.ui
019-qt5/02-wrap/: CMakeLists.txt
019-qt5/02-wrap/include/: mainwindow.h
020-test/01-gtest/: CMakeLists.txt
020-test/01-gtest/include/geometry/: point.hpp
020-test/01-gtest/src/: main.cpp
020-test/01-gtest/src/geometry/: point.cpp
020-test/01-gtest/test/: environment.cpp  environment.hpp  main.cpp
020-test/01-gtest/test/geometry/: point.cpp
020-test/02-boost/: CMakeLists.txt  build.sh  test.sh
020-test/02-boost/test/: environment.cpp  environment.hpp
020-test/02-boost/test/geometry/: point.cpp
020-test/03-catch2/: CMakeLists.txt
020-test/03-catch2/test/: environment.cpp  environment.hpp  main.cpp
020-test/03-catch2/test/geometry/: point.cpp
